[gd_scene load_steps=14 format=3 uid="uid://c0knmp8p2f8aj"]

[ext_resource type="Script" path="res://scripts/option.gd" id="1_14su1"]
[ext_resource type="PackedScene" uid="uid://b0tlbykdpriee" path="res://scenes/menu_menu.tscn" id="2_rt1fo"]
[ext_resource type="PackedScene" uid="uid://np1k8omx8hjg" path="res://scenes/menu.tscn" id="3_igt7r"]
[ext_resource type="PackedScene" uid="uid://b60swerlqj70r" path="res://scenes/button.tscn" id="4_77x3r"]
[ext_resource type="PackedScene" uid="uid://cpu6f4r417uhj" path="res://scenes/transition.tscn" id="5_51q3p"]
[ext_resource type="PackedScene" uid="uid://c570vslh3qh0b" path="res://scenes/checkbox.tscn" id="5_mx4he"]

[sub_resource type="LabelSettings" id="LabelSettings_3hl6l"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_vlqbp"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ho1s0"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_j0mig"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_l6ytv"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_ewmv0"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_gl7b8"]
font_size = 30

[node name="option" type="Node2D"]
script = ExtResource("1_14su1")

[node name="background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0.0605303, 0.0605303, 0.0605303, 1)

[node name="title" type="Label" parent="."]
offset_left = 456.0
offset_top = 112.0
offset_right = 700.0
offset_bottom = 249.0
text = "PING"
label_settings = SubResource("LabelSettings_3hl6l")

[node name="finishMod" type="Label" parent="."]
offset_left = 704.0
offset_top = 304.0
offset_right = 837.0
offset_bottom = 339.0
text = "Finish mod"
label_settings = SubResource("LabelSettings_vlqbp")

[node name="mapMod" type="Label" parent="."]
offset_left = 888.0
offset_top = 304.0
offset_right = 1053.0
offset_bottom = 339.0
text = "map modifier
"
label_settings = SubResource("LabelSettings_ho1s0")

[node name="goal" type="Label" parent="." groups=["goalControl"]]
offset_left = 112.0
offset_top = 352.0
offset_right = 174.0
offset_bottom = 387.0
text = "Goal:"
label_settings = SubResource("LabelSettings_j0mig")

[node name="Ngoal" type="Label" parent="." groups=["goalControl"]]
offset_left = 128.0
offset_top = 400.0
offset_right = 184.0
offset_bottom = 442.0
text = "10"
label_settings = SubResource("LabelSettings_l6ytv")
horizontal_alignment = 1

[node name="Timer" type="Label" parent="." groups=["timerControl"]]
offset_left = 304.0
offset_top = 352.0
offset_right = 381.0
offset_bottom = 387.0
text = "Timer:
"
label_settings = SubResource("LabelSettings_ewmv0")

[node name="intTimer" type="Label" parent="." groups=["timerControl"]]
offset_left = 320.0
offset_top = 400.0
offset_right = 392.0
offset_bottom = 442.0
text = "60
"
label_settings = SubResource("LabelSettings_gl7b8")
horizontal_alignment = 1

[node name="menuMenu" parent="." instance=ExtResource("2_rt1fo")]
default = 2
orientation = "h"

[node name="goal" parent="menuMenu" instance=ExtResource("3_igt7r")]
layout_mode = 1

[node name="btn_plus" parent="menuMenu/goal" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 192.0
offset_top = 376.0
offset_right = 245.0
offset_bottom = 581.0
text = "+"
message = "+"

[node name="btn_minus" parent="menuMenu/goal" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 192.0
offset_top = 424.0
offset_right = 245.0
offset_bottom = 629.0
text = "-"
message = "-"

[node name="btn_reset" parent="menuMenu/goal" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 128.0
offset_top = 448.0
offset_right = 497.0
offset_bottom = 653.0
text = "reset"
message = "reset"

[node name="timer" parent="menuMenu" instance=ExtResource("3_igt7r")]
layout_mode = 1

[node name="btn_plus" parent="menuMenu/timer" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 392.0
offset_top = 384.0
offset_right = 478.0
offset_bottom = 589.0
text = "+"
message = "+"

[node name="btn_minus" parent="menuMenu/timer" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 392.0
offset_top = 432.0
offset_right = 445.0
offset_bottom = 637.0
text = "-"
message = "-"

[node name="btn_reset" parent="menuMenu/timer" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 312.0
offset_top = 448.0
offset_right = 805.0
offset_bottom = 653.0
text = "reset"
message = "reset"

[node name="play" parent="menuMenu" instance=ExtResource("3_igt7r")]
layout_mode = 1

[node name="btn_play" parent="menuMenu/play" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 520.0
offset_top = 320.0
offset_right = 1296.0
offset_bottom = 525.0
text = "local game"
message = "local game"

[node name="btn_multi" parent="menuMenu/play" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 512.0
offset_top = 368.0
offset_right = 1403.0
offset_bottom = 573.0
text = "online game"
message = "online game"

[node name="btn_controls" parent="menuMenu/play" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 536.0
offset_top = 416.0
offset_right = 1127.0
offset_bottom = 621.0
text = "controls"
message = "controls"

[node name="btn_players" parent="menuMenu/play" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 536.0
offset_top = 464.0
offset_right = 1063.0
offset_bottom = 669.0
text = "players"
message = "players"

[node name="btn_quit" parent="menuMenu/play" instance=ExtResource("4_77x3r")]
layout_mode = 0
offset_left = 552.0
offset_top = 512.0
offset_right = 841.0
offset_bottom = 717.0
text = "quit"
message = "quit"

[node name="finishModMenu" parent="menuMenu" instance=ExtResource("3_igt7r")]
layout_mode = 1
checkbox = true

[node name="btn_tng" parent="menuMenu/finishModMenu" instance=ExtResource("5_mx4he")]
layout_mode = 0
offset_left = 688.0
offset_top = 352.0
offset_right = 1936.0
offset_bottom = 557.0
text = "     timer and goal"
message = "timer and goal"

[node name="btn_timer" parent="menuMenu/finishModMenu" instance=ExtResource("5_mx4he")]
layout_mode = 0
offset_left = 688.0
offset_top = 408.0
offset_right = 1382.0
offset_bottom = 613.0
text = "     timer"
message = "timer"

[node name="btn_goal" parent="menuMenu/finishModMenu" instance=ExtResource("5_mx4he")]
layout_mode = 0
offset_left = 688.0
offset_top = 464.0
offset_right = 1187.0
offset_bottom = 669.0
text = "     goal"
message = "goal"

[node name="mapModifierMenu" parent="menuMenu" instance=ExtResource("3_igt7r")]
layout_mode = 1
checkbox = true

[node name="btn_none" parent="menuMenu/mapModifierMenu" instance=ExtResource("5_mx4he")]
layout_mode = 0
offset_left = 912.0
offset_top = 352.0
offset_right = 1606.0
offset_bottom = 557.0
text = "      none"
message = "none"

[node name="btn_separator" parent="menuMenu/mapModifierMenu" instance=ExtResource("5_mx4he")]
layout_mode = 0
offset_left = 912.0
offset_top = 408.0
offset_right = 1606.0
offset_bottom = 613.0
text = "     separator"
message = "separator"

[node name="btn_zone" parent="menuMenu/mapModifierMenu" instance=ExtResource("5_mx4he")]
layout_mode = 0
offset_left = 912.0
offset_top = 464.0
offset_right = 1606.0
offset_bottom = 669.0
text = "     zone"
message = "zone"

[node name="transition" parent="." instance=ExtResource("5_51q3p")]
visible = false

[node name="mute label" type="Label" parent="."]
offset_left = 16.0
offset_top = 600.0
offset_right = 265.0
offset_bottom = 623.0
text = "press C to mute/unmute sounds"

[node name="music credit" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 281.0
offset_bottom = 39.0
text = "music : MALO BANGER by vexcited"

[node name="game credit" type="Label" parent="."]
offset_left = 16.0
offset_top = 40.0
offset_right = 162.0
offset_bottom = 63.0
text = "game by me (Mylo)"

[connection signal="pressed" from="menuMenu/goal" to="." method="_on_goal_pressed"]
[connection signal="pressed" from="menuMenu/timer" to="." method="_on_timer_pressed"]
[connection signal="pressed" from="menuMenu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menuMenu/finishModMenu" to="." method="_on_finish_mod_menu_pressed"]
[connection signal="pressed" from="menuMenu/mapModifierMenu" to="." method="_on_map_modifier_menu_pressed"]
[connection signal="exited" from="transition" to="." method="_on_transition_exited"]
